update schema user
